# AbAgAL

./: README.md  pyproject.toml
scripts/: preprocess_ab_ag.py
src/abagal/: run_method.py
src/abagal/data/: prepare_ab_ag_dataset.py
src/abagal/model/: abagal.py  methods.py  qbc.py
