[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AbAgAL"
version = "0.1.0"
description = "Описание вашего проекта AbAgAL"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "anyio==4.9.0",
  "bio==1.8.0",
  "biopython==1.85",
  "biothings_client==0.4.1",
  "certifi==2025.7.14",
  "charset-normalizer==3.4.2",
  "filelock==3.18.0",
  "fsspec==2025.7.0",
  "gprofiler-official==1.0.0",
  "h11==0.16.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "idna==3.10",
  "Jinja2==3.1.6",
  "joblib==1.5.1",
  "Levenshtein==0.27.1",
  "MarkupSafe==3.0.2",
  "mpmath==1.3.0",
  "mygene==3.2.2",
  "networkx==3.5",
  "numpy==1.26.4",
  "packaging==25.0",
  "pandas==2.3.1",
  "platformdirs==4.3.8",
  "pooch==1.8.2",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "RapidFuzz==3.13.0",
  "requests==2.32.4",
  "scikit-learn==1.7.1",
  "scipy==1.16.0",
  "six==1.17.0",
  "sniffio==1.3.1",
  "sympy==1.14.0",
  "threadpoolctl==3.6.0",
  "torch==2.2.2",
  "tqdm==4.67.1",
  "typing_extensions==4.14.1",
  "tzdata==2025.2",
  "urllib3==2.5.0"
]